--- a/java-coding-algorithms/pom.xml
+++ b/java-coding-algorithms/pom.xml
@@ -143,6 +143,11 @@
             <version>1.18.26</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>cc.duduhuo.util</groupId>
+            <artifactId>digest-util</artifactId>
+            <version>1.1.1</version>
+        </dependency>
 
         <!-- LOGGING end -->
     </dependencies>
