--- a/pom.xml
+++ b/pom.xml
@@ -8,10 +8,20 @@
     <artifactId>java-coding</artifactId>
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>3.1.10</version>
+    </parent>
+
     <modules>
         <module>java-coding-algorithms</module>
         <module>java-coding-worktest</module>
+        <module>springboot-camunda</module>
+        <module>springboot-mybatis-plus</module>
     </modules>
+    
     <dependencies>
         <dependency>
             <groupId>commons-codec</groupId>
