--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,12 @@
             <version>1.18.24</version>
             <scope>provided</scope>
         </dependency>
+        <!-- 公共工具类 -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.4</version>
+        </dependency>
     </dependencies>
 
 </project>
