--- a/springboot-mybatis-plus/src/main/resources/application.yml
+++ b/springboot-mybatis-plus/src/main/resources/application.yml
@@ -15,9 +15,9 @@ spring:
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: ${DB_URL:jdbc:mysql://localhost:3306/rw_scene?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=true&serverTimezone=GMT%2B8}
+    url: jdbc:mysql://proxy:13306/rw_scene?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=true&serverTimezone=GMT%2B8
     username: ${DB_USERNAME:root}
-    password: ${DB_PASSWORD:}
+    password: VSDLKVJSD#KLdVJS2DLKVJDVWEOIO%PQVXPBVNR
     
     # Druid连接池配置
     druid:
